--- a/js_jquery.html
+++ b/js_jquery.html
@@ -1,12 +1,12 @@
 <html>
-    <head>
-        <title>Jquery</title>
-        <script>
-            console.log('aaa');
-        </script>
-
-    </head>
-    <body>
-
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Demo</title>
+</head>
+<body>
+    <script src="./jquery-3.6.4.min.js"></script>
+    <script>
+       console.log(`jquery version:${$.fn.jquery}`);
+    </script>
+</body>
 </html>
